--- a/Patter page/index.html
+++ b/Patter page/index.html
@@ -24,7 +24,7 @@
     <div
       class="bg d-flex justify-content-center align-items-center"
       style="
-        background-image: url(/header.jpeg);
+        background-image: url(header.jpeg);
         height: 40vh;
         background-size: auto;
         background-position: center;
@@ -49,7 +49,7 @@
     <div class="container-sm my-5 justify-content-center align-items-center">
       <div class="row">
         <div class="col-sm">
-          <img class="rounded-top" width="400px" src="/pattern1.jpeg" alt="" />
+          <img class="rounded-top" width="400px" src="pattern1.jpeg" alt="" />
           <div class="border border-secondary border-opacity-25">
             <p class="fs-3 fw-semibold">Mozaika nr. 1</p>
             <p class="fs-5">Gražios mozaikos spavyzdys</p>
@@ -63,7 +63,7 @@
 
        
         <div class="col-sm">
-          <img class="rounded-top" width="400px" src="/pattern2.jpeg" alt="" />
+          <img class="rounded-top" width="400px" src="pattern2.jpeg" alt="" />
           <div class="border border-secondary border-opacity-25">
             <p class="fs-3 fw-semibold">Mozaika nr. 2</p>
             <p class="fs-5">Gražios mozaikos spavyzdys</p>
@@ -77,7 +77,7 @@
         
 
         <div class="col-sm">
-          <img class="rounded-top" width="400px" src="/pattern3.jpeg" alt="" />
+          <img class="rounded-top" width="400px" src="pattern3.jpeg" alt="" />
           <div class="border border-secondary border-opacity-25">
             <p class="fs-3 fw-semibold">Mozaika nr. 3</p>
             <p class="fs-5">Gražios mozaikos spavyzdys</p>
@@ -85,7 +85,7 @@
               Atsisiųsti
             </button>
             <button type="button" class="btn btn-outline-danger m-1 fs-5">
-              <img width="20px" src="/heart-regular.svg" alt="" />
+              <img width="20px" src="heart-regular.svg" alt="" />
             </button>
           </div>
         </div>
